package Exceprions;

public class DencityException extends RuntimeException{
}
